--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="aset/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Group-cinéma</title>
 </head>
 <body>
-    
+    <header>
+      <div class="navbar">
+        <div class="logo"> <h1>CINEMA PUB</h1> </div>
+        <nav>
+            <ul>
+                <li>Acceuil</li>
+                <li> Films</li>
+                <li>Blockbusters</li>
+                <li> Horaires</li>
+                <li>contact </li>
+                <li><button> Reservation </button></li>
+            </ul>
+        </nav> 
+      </div>
+    </header>
 </body>
 <script src="java.js"></script>
 </html>
